[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/ui/fonts/montserrat_eb_48.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/ui/fonts/montserrat_eb_32.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/ui/icons/close.png" type="Texture" id=3]
[ext_resource path="res://scene/control/score_board/score_board.gd" type="Script" id=4]

[node name="score_board" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.603922 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="PanelContainer" parent="CenterContainer"]
margin_left = 50.0
margin_top = 212.0
margin_right = 550.0
margin_bottom = 812.0
rect_min_size = Vector2( 500, 600 )

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/Panel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 493.0
margin_bottom = 593.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer3" type="HBoxContainer" parent="CenterContainer/Panel/VBoxContainer"]
margin_right = 486.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/Panel/VBoxContainer/HBoxContainer3"]
margin_right = 80.0
margin_bottom = 100.0
rect_min_size = Vector2( 80, 0 )

[node name="Label" type="Label" parent="CenterContainer/Panel/VBoxContainer/HBoxContainer3"]
margin_left = 84.0
margin_top = 20.0
margin_right = 402.0
margin_bottom = 80.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "Score"
align = 1
valign = 1

[node name="button_close" type="Button" parent="CenterContainer/Panel/VBoxContainer/HBoxContainer3"]
margin_left = 406.0
margin_right = 486.0
margin_bottom = 100.0
rect_min_size = Vector2( 80, 0 )
icon = ExtResource( 3 )
flat = true
expand_icon = true

[node name="ScrollContainer" type="ScrollContainer" parent="CenterContainer/Panel/VBoxContainer"]
margin_top = 104.0
margin_right = 486.0
margin_bottom = 482.0
size_flags_vertical = 3
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/Panel/VBoxContainer/ScrollContainer"]
margin_right = 486.0
size_flags_horizontal = 3

[node name="disconnect_button" type="Button" parent="CenterContainer/Panel/VBoxContainer"]
margin_top = 486.0
margin_right = 486.0
margin_bottom = 586.0
rect_min_size = Vector2( 0, 100 )
custom_fonts/font = ExtResource( 2 )
text = "Disconnect"

[connection signal="pressed" from="CenterContainer/Panel/VBoxContainer/HBoxContainer3/button_close" to="." method="_on_button_close_pressed"]
[connection signal="pressed" from="CenterContainer/Panel/VBoxContainer/disconnect_button" to="." method="_on_disconnect_button_pressed"]
